--- a/index.html
+++ b/index.html
@@ -3,77 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>murdered</title>
-  <link rel="stylesheet" href="style.css" />
-<link rel="icon" type="image/gif" href="image/favicon.gif">
-<script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool"></script>
-<meta property="og:title" content="death">
-<meta property="og:description" content="I grieve for you.">
-<meta property="og:image" content="image/favicon.gif">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://murdered.lol/">
-<meta name="twitter:card" content="death">
-<meta name="twitter:title" content="I grieve for you.">
-<meta name="twitter:description" content="grief is a process, not an event.">
-<meta name="twitter:image" content="image/favicon.gif">
+  <title></title>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      background-color: #111;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: monospace, monospace;
+      color: rgba(255, 255, 255, 0.15);
+      font-size: 1.0rem;
+      user-select: none;
+      text-align: center;
+      padding: 1rem;
+    }
+  </style>
 </head>
 <body>
-  
-  <div class="container">
-    <div class="profile-header">
-      <img class="avatar" src="image/favicon.gif" alt="avatar" />
-
-      <img class="banner-img" src="image/notebook.png" alt="banner" />
-
-      <div class="user-info">
-        <h1 class="sparkle-banner">
-       murdered<span class="tag"> [LOL]</span>
-          <div class="sparkle-effect"></div>
-        </h1>
-        <p>grief,</p>
-        <div class="follows">
-          <span><strong>1</strong> Following</span>
-          <span><strong>999</strong> Followers</span>
-        </div>
-      </div>
-      <button class="follow-btn">Follow</button>
-    </div>
-    <div class="email-link">t.me/partywire1</div>
-
-    <div class="section-box">
-      <h2>Info</h2>
-      <table>
-        <tr><td>UID</td><td class="value">1</td></tr>
-        <tr><td>Pastes</td><td class="value">3</td></tr>
-        <tr><td>Likes</td><td class="value">0</td></tr>
-        <tr><td>Created:</td><td class="value">May 25, 2025</td></tr>
-      </table>
-    </div>
-
-    <div class="section-box">
-      <h2>Pastes</h2>
-      <table class="paste-table">
-        <thead>
-          <tr><th>Title</th><th>Comments</th><th>Views</th><th>Added</th></tr>
-        </thead>
-        <tbody>
-          <tr><td><a href="https://files.catbox.moe/abc1.txt">KNR</a></td><td>0</td><td>0</td><td>Soon.</td></tr>
-          <tr><td><a href="https://files.catbox.moe/abc2.txt">ST</a></td><td>0</td><td>0</td><td>Soon.</td></tr>
-          <tr><td><a href="https://files.catbox.moe/abc3.txt">764</a></td><td>0</td><td>0</td><td>Soon.</td></tr>
-        </tbody>
-      </table>
-      <div class="note">Showing 3 out of 3 pastes</div>
-    </div>
-
-    <div class="section-box">
-      <h2>Comments (0)</h2>
-      <div class="comments">
-  
-      </div>
-    </div>
-  </div>
-   <audio autoplay loop>
-    <source src="https://files.catbox.moe/bedtup.mp3" type="audio/mpeg" />
-  </audio>
+  <div>This website is inactive at the moment, Contact me at t.me/partywire for what we should do with this website.</div>
 </body>
 </html>
