--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
   </style>
 </head>
 <body>
-  <div>This website is inactive at the moment, Contact me at t.me/partywire for what we should do with this website.</div>
+  <div>murdered.lol</div>
 </body>
 </html>
