--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <div class="redirect-buttons">
       <button onclick="redirectTo('net.html')">Net</button>
-      <button onclick="redirectTo('Tragic.html')">Tragic</button>
-      <button onclick="redirectTo('Resist.html')">Resist</button>
+      <button onclick="redirectTo('tragic.html')">Tragic</button>
+      <button onclick="redirectTo('resist.html')">Resist</button>
     </div>
 
     <!-- Archive Button Below Others -->
