--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <img src="imgs/dress.gif" alt="Intro" class="overlay-gif" />
 
     <div class="redirect-buttons">
-      <button onclick="redirectTo('net.html')">Net</button>
-      <button onclick="redirectTo('tragic.html')">Tragic</button>
-      <button onclick="redirectTo('resist.html')">Resist</button>
+      <button onclick="redirectTo('net')">Net</button>
+      <button onclick="redirectTo('tragic')">Tragic</button>
+      <button onclick="redirectTo('resist')">Resist</button>
     </div>
 
     <!-- Archive Button Below Others -->
